--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 </div>
                 <br>
                 <h4 id="time" class="text text-success" style="text-align: center;">Time</h4>
+                <p id="day" class="text text-primary" style="text-align: center;">Day</p>
                 <h5 class="text text-warning" style="text-align: center;">Corona Live Update <span id="country">(Any Country)</span></h5>
                 <div class="c1 new-case col-lg-12 col-sm-11">
                     <p>New Cases</p>
@@ -176,13 +177,16 @@
 
     <script>
         // Time setting...
+        const Day = ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'];
         const time = document.getElementById('time');
+        const day = document.getElementById('day');
         function timeSet(){
             let timeSession = "AM";
             const date = new Date();
             let h = date.getHours();//0-23
             let m = date.getMinutes();//0-59
             let s = date.getSeconds();//0-59
+            let curDate = date.getDate()+"-"+date.getMonth()+"-"+date.getFullYear();
             if(h>12){
                 h = h%12;
                 timeSession = "PM";
@@ -194,7 +198,8 @@
             h = (h<10) ? "0"+h : h;
             m = (m<10) ? "0"+m : m;
             s = (s<10) ? "0"+s : s;
-            time.innerText = `${h}:${m}:${s} ${timeSession}`;
+            day.innerText = Day[date.getDay()];
+            time.innerText = `${h}:${m}:${s} ${timeSession} :: ${curDate}`;
         }
         setInterval(() => {
             timeSet();
