--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </section>
             <div id="sec3-2" class="sec3 container">
                 <button onclick="reload()" class="btn btn-info" id="update">Update Reload</button><br><br>
-                <a href="#">@ copyright: 2020, MMHK</a>
+                <a href="#">@ copyright: <span id="year-date"></span>, MMHK</a>
             </div>
         </div>
     </main>
@@ -270,6 +270,7 @@
         function reload(){
             location.reload();
         }
+        document.getElementById('year-date').innerHTML = new Date().getFullYear();
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
