--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </section>
             <div id="sec3-2" class="sec3 container">
                 <button onclick="reload()" class="btn btn-info" id="update">Update Reload</button><br><br>
-                <a href="#">@ copyright: <span id="year-date"></span>, MMHK</a>
+                <p class="">Copyright © <span id="year-date"></span> mahadi</p>
             </div>
         </div>
     </main>
