--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     
     <!-- <section class="sec3 container">
         <button onclick="reload()" class="btn btn-info" id="update">Update Reload</button><br><br>
-        <a href="#">@ copyright: 2020, MMHK</a>
+        <p class="">Copyright © <span id="date"></span> mahadi</p>
     </section> -->
 
     <script>
